--- a/interfaz/json/package.json
+++ b/interfaz/json/package.json
@@ -12,7 +12,7 @@
     "babel-core": "^5.8.25",
     "browser-sync": "^2.2.3",
     "chai": "^3.3.0",
-    "chai-jquery": "^2.0.0",
+    "chai-jquery": ">=3.4.0",
     "del": "^2.0.2",
     "drool": "^0.3.1",
     "escodegen": "^1.6.1",
@@ -50,7 +50,7 @@
     "gulp-util": "^3.0.4",
     "gulp-zip": "^3.0.2",
     "humanize": "0.0.9",
-    "jquery": "^2.1.3",
+    "jquery": ">=3.4.0",
     "jshint-stylish": "^2.0.1",
     "merge-stream": "^1.0.0",
     "mocha": "^2.1.0",
